# wazoo

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  cliff.toml  config.yml  pyproject.toml
.github/workflows/: compile.yml  container.yml  pypi.yml  release.yml
docker/: agent.yml  server.yml
docker/config/: ossec.conf
docs/: README.md  making-wazuh-server-for-fun-and-maybe-profit.md
docs/blog/: README.md
scripts/: generate_ssl.sh  release.sh
src/: log.py  server.py
src/wazuh/: agent.py  enum.py  helper.py
wazoo/: __init__.py  __main__.py  buffer.py  config.py  log.py  server.py  utils.py
wazoo/wazuh/: agent.py  helper.py
