[project]

name = "wazoo"
version = "0.1.1"
description = "Python Wazuh runtime server to handle agent registration and log receive"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "pycryptodome>=3.23.0",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.39",
    "uvloop>=0.22.1",
]

[project.scripts]
wazoo = "wazoo.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "git-cliff>=2.13.1",
    "nuitka[app]>=4.1.3",
]

[tool.uv.sources]
nuitka = { git = "https://github.com/Nuitka/Nuitka.git", rev = "develop" }
